schema/testdata/errors/flow_unsupported_attribute.keel
flow MyFlow {
    //expect-error:5:16:E011:flow 'MyFlow' has an unrecognised attribute @whatisthis
    @whatisthis
}
